--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Nehapatil9096.github.io/Notes_app.app",
+  "homepage": "https://Nehapatil9096.github.io/Notes_app",
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
